docusaurus/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #0074ff;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --ifm-navbar-link-hover-color: var(--ifm-navbar-link-color);
  --ifm-menu-color-active: var(--ifm-color-primary);

}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #94c5ff;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.navbar__brand {
  margin-right: 0;
}

.navbar__link:hover {
  text-decoration: underline;
}

.pl-0 {
  padding-left: 0;
}

.site-title {
  font-size: 1.5rem;
}

.contact-list {
  list-style: none;
  padding: 0;
}

.none-list {
  list-style: none;
  margin-left: 0;
}

.hidden {
  display: none;
}

li {
  -webkit-text-size-adjust: 100%;
}

.button--primary {
  background-color: var(--ifm-color-primary);
  border-radius: 10px;
  border: 0;
  color: white;
  cursor: pointer;
  font-size: 1rem;
  padding: 15px 25px;
}

.button--primary:hover {
  background-color: #5e8fc8;
}

.button--primary:disabled {
  background-color: var(--ifm-toc-border-color);
  cursor: unset;
}

/* Sidebar */

.theme-doc-sidebar-item-category-level-1 > div > a {
  font-weight: bold;
}

/* Integration */

.grid {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
}

.cell {
  align-items: center;
  border-radius: 10px;
  border: 1px solid var(--ifm-color-emphasis-300);
  color: var(--ifm-heading-color);
  display: flex;
  flex-shrink: 0;
  gap: 20px;
  padding: 10px 20px;
  width: 265px;
}

.cell:hover {
  border-color: var(--ifm-pagination-nav-color-hover);
  color: var(--ifm-heading-color);
  text-decoration: none;
}

.cell__image {
  align-items: center;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  width: 70px;
}

.cell__image img {
  border-radius: 9999px;
  display: block;
}

.cell__image--ruby img {
  border-radius: 0;
  width: 60px;
}

.cell__title {
  display: inline-block;
  margin: 0;
}

/* Overview */

.center {
  text-align: center;
}

.w-full {
  width: 100%;
}

